--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+
+
+
+#btn{ 
+background-color:black;
+color:yellowgreen;
+border:none;
+border-radius:5px; }
+#btn:hover {
+background-color:red;
+color:black;
+border-radius:30px;
+  }
