--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,10 @@
-
-/* Your CSS Code here. */
-
-
-
 #btn{ 
 background-color:black;
-color:yellowgreen;
+color:white;
 border:none;
 border-radius:5px; }
 #btn:hover {
-background-color:red;
+background-color:yellow;
 color:black;
 border-radius:30px;
   }
